# operating-systems-course

./: .gitignore  README.md
Homeworks/Homework_1/: CMakeLists.txt  file_system.c  file_system.h  main.c  report.txt  typedefs.h
Projects/Project_1/: CMakeLists.txt  c_string.c  c_string.h  common_include.h  file.c  file.h  input.txt  main.c  project_util.c  project_util.h  psearch1.c  psearch1a.c  psearch1b.c  psearch1c.c  psearch2.c  psearch2a.c  psearch2aslave.c  psearch2b.c  psearch2bslave.c  psearch2c.c  psearch2cslave.c  psearch2d.c  psearch2dslave.c  psearch3.c  psearch_normal.c  typedefs.h
Projects/Project_1/benchmarks/: 1.csv  1.md  10.csv  10.md  20.csv  20.md  5.csv  5.md  benchmark.py  report.docx
Projects/Project_2/: CMakeLists.txt  Makefile  main.c
