cmake_minimum_required(VERSION 3.10)
project(Homework_1 C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -pedantic -Wextra")

add_library(common c_string.c file.c project_util.c)
add_executable(test_o main.c)
add_executable(psearch1a psearch1a.c)
add_executable(psearch1b psearch1b.c)
add_executable(psearch1c psearch1c.c)
target_link_libraries(test_o common)
target_link_libraries(psearch1a common)
target_link_libraries(psearch1b common pthread rt)
target_link_libraries(psearch1c common)